[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/personaje.png" type="Texture" id=1]
[ext_resource path="res://scenes/personajePlataforma/PersonajePlataforma.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 58.8203, 56.7003 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3.18535, 51.2927 )

[node name="PersonajePlataforma" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="ColisionPersonaje" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="DetectorSalidaIzqueirda" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorSalidaIzqueirda"]
position = Vector2( -59.031, 0 )
shape = SubResource( 2 )

[node name="DetectorSalidaDerecha" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorSalidaDerecha"]
position = Vector2( 56.8844, 0 )
shape = SubResource( 3 )

[node name="DeteccionCentro" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeteccionCentro"]
shape = SubResource( 4 )
[connection signal="area_entered" from="DetectorSalidaIzqueirda" to="." method="_on_DetectorSalidaIzqueirda_area_entered"]
[connection signal="area_entered" from="DetectorSalidaDerecha" to="." method="_on_DetectorSalidaDerecha_area_entered"]
[connection signal="area_entered" from="DeteccionCentro" to="." method="_on_DeteccionCentro_area_entered"]
